[gd_scene load_steps=13 format=3 uid="uid://ct0spru8yxrym"]

[ext_resource type="Script" path="res://Player/Player.gd" id="1"]
[ext_resource type="SpriteFrames" uid="uid://c3qaqms5oug7b" path="res://Player/PlayerSprites.tres" id="2"]
[ext_resource type="PackedScene" uid="uid://dn47eubrdwcgl" path="res://UI/PauseMenu/PauseMenu.tscn" id="3"]
[ext_resource type="Material" uid="uid://0jweq12vjyw8" path="res://Player/SlideParticles.tres" id="4"]
[ext_resource type="Texture2D" uid="uid://buo25vgp3y7ea" path="res://World/Light/spot.png" id="5_78lhg"]
[ext_resource type="Texture2D" uid="uid://xdhedbvq4fc3" path="res://World/Terrain/background.png" id="6"]
[ext_resource type="Script" path="res://Player/Animation.gd" id="7"]
[ext_resource type="Texture2D" uid="uid://8q1ncf4m00i8" path="res://Player/SlidePartGradient.tres" id="7_hf0vw"]

[sub_resource type="CircleShape2D" id="CircleShape2D_6gx4w"]
radius = 7.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2btgx"]
size = Vector2(0.6, 2.75)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1txel"]
size = Vector2(0.6, 2.75)

[sub_resource type="Environment" id="48"]
background_mode = 4
background_color = Color(1, 1, 1, 1)
ssr_enabled = true
glow_enabled = true
glow_intensity = 0.19
glow_strength = 0.83
glow_hdr_luminance_cap = 1.0

[node name="Player" type="CharacterBody2D"]
collision_layer = 5
collision_mask = 5
script = ExtResource("1")

[node name="Background" type="Sprite2D" parent="."]
visible = false
modulate = Color(0.101961, 0.101961, 0.101961, 1)
position = Vector2(0, -5)
texture = ExtResource("6")

[node name="CatSprite" type="AnimatedSprite2D" parent="."]
light_mask = 2
position = Vector2(0, -11)
sprite_frames = ExtResource("2")
animation = &"readyfalling"
autoplay = "readyfalling"
script = ExtResource("7")

[node name="NoShadow" type="PointLight2D" parent="CatSprite"]
position = Vector2(0, 7)
energy = 0.75
texture = ExtResource("5_78lhg")
texture_scale = 0.6

[node name="Shadow" type="PointLight2D" parent="CatSprite"]
light_mask = 3
visibility_layer = 3
position = Vector2(0, 7)
shadow_enabled = true
shadow_color = Color(0, 0, 0, 1)
shadow_filter = 2
shadow_item_cull_mask = 3
texture = ExtResource("5_78lhg")

[node name="Collision" type="CollisionShape2D" parent="."]
modulate = Color(0.756863, 0, 1, 1)
position = Vector2(0, -2)
rotation = 1.5708
shape = SubResource("CircleShape2D_6gx4w")

[node name="Camera" type="Camera2D" parent="."]
zoom = Vector2(1.2, 1.2)
position_smoothing_enabled = true

[node name="WallRight" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="Collision" type="CollisionShape2D" parent="WallRight"]
position = Vector2(7.5, -3.75)
shape = SubResource("RectangleShape2D_2btgx")

[node name="SlideParticles" type="GPUParticles2D" parent="WallRight"]
position = Vector2(7.5, -5)
emitting = false
process_material = ExtResource("4")
texture = ExtResource("7_hf0vw")
preprocess = 1.0
randomness = 1.0

[node name="SlideParticles2" type="GPUParticles2D" parent="WallRight"]
position = Vector2(7.5, -1)
emitting = false
process_material = ExtResource("4")
texture = ExtResource("7_hf0vw")
preprocess = 1.0
randomness = 1.0

[node name="WallLeft" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="Collision" type="CollisionShape2D" parent="WallLeft"]
position = Vector2(-7.5, -3.75)
shape = SubResource("RectangleShape2D_1txel")

[node name="SlideParticles" type="GPUParticles2D" parent="WallLeft"]
position = Vector2(-7.5, -5)
emitting = false
process_material = ExtResource("4")
texture = ExtResource("7_hf0vw")
preprocess = 1.0
randomness = 1.0

[node name="SlideParticles2" type="GPUParticles2D" parent="WallLeft"]
position = Vector2(-7.5, -1)
emitting = false
process_material = ExtResource("4")
texture = ExtResource("7_hf0vw")
preprocess = 1.0
randomness = 1.0

[node name="UI" type="CanvasLayer" parent="."]

[node name="PauseMenu" parent="UI" instance=ExtResource("3")]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("48")

[connection signal="move" from="." to="CatSprite" method="_on_Player_move"]
[connection signal="upitgoes" from="." to="CatSprite" method="_on_Player_upitgoes"]
